--- a/docs/style.css
+++ b/docs/style.css
@@ -2,7 +2,8 @@ html
 {
     width: 100%;
     height: 100%;
-    background: linear-gradient(205deg, rgb(74, 25, 139) 0%, rgb(36, 31, 43) 100%);
+    background: #010101;
+    background: radial-gradient(at left bottom, #010101, #220437);
 }
 body {
     margin-top: 100px;
