--- a/docs/style.css
+++ b/docs/style.css
@@ -92,7 +92,7 @@ h3{
     margin-left: 60px;
     width: 674px;
     color: #FFF;
-    font-family: Gilroy;
+    font-family: 'Open Sans', sans-serif;
     font-size: 34px;
     font-style: normal;
     font-weight: 300;
