--- a/docs/style.css
+++ b/docs/style.css
@@ -1,7 +1,7 @@
 html
 {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     background: #010101;
     background: radial-gradient(at left bottom, #010101, #220437);
 }
@@ -9,14 +9,19 @@ body {
     margin-top: 100px;
     max-width: 1440px;
     margin: 0 auto;
-
 }
 header{
     position: fixed;
     top: 0;
-    max-width: 1440px;
     z-index: 10;
     margin: 0 auto;
+    background: radial-gradient(at left bottom, #161318, #220437);
+    color: #fff;
+    padding: 5px;
+    border-radius: 0px 0px 30px 30px;
+    margin-top: -20px;
+    padding-right: 60px;
+    padding-bottom: 10px;
     
 }
 nav{
@@ -70,7 +75,7 @@ a:visited{
     width: 40px;
     height: 40px;
     flex-shrink: 0;
-    margin-right: 552px;
+    margin-right: 505px;
     margin-top: -10px;
 }
 
@@ -129,23 +134,99 @@ h3{
     margin-left: 60px;
 }
 
-main {
+.main_page {
     margin-top: 116px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-main .content {
+.main_page .content {
     position: relative;
     z-index: 1;
 }
 
-main .image {
+.main_page .image {
     flex: 0 0 646px;
     transform: translateX(-120px);
 }
 
-main img {
+.main_page img {
     max-width: 100%;
+}
+iframe{
+    width: 456px;
+    height: 811px;
+    flex-shrink: 0;
+    border-radius: 50px;
+    scale: 85%;
+    margin-left: 20px;
+    margin-top: -80px;
+}
+
+.cases{
+    padding-top: 70px;
+}
+
+.cases h1{
+    font-size: 70px;
+    text-align: center;
+    background: linear-gradient(270deg, #5824EC 0%, #4AFFFB 101.25%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    padding-bottom: 0px;
+}
+.cases h2{
+    margin-left: 60px;
+    margin-top: 22px;
+    margin-bottom: 43px;
+    color: #FFF;
+    font-family: Gilroy;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+
+.cases div{
+    padding: 0px;
+    margin: 0px;
+}
+
+.cases p{
+    color: #FFF;
+    font-family: Gilroy;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+
+#p_dentist{
+    margin-left: 175px;
+    margin-top: -65px;
+}
+
+#p_cosmo{
+    margin-left: 660px;
+    margin-top: -63px;
+}
+
+#p_lawyer{
+    margin-left: 1160px;
+    margin-top: -62px;
+}
+#p_surgeon{
+    margin-left: 90px;
+    margin-top: -68px;
+}
+#p_befit{
+    margin-left: 990px;
+    margin-top: -62px;
+    text-align: center;
+}
+#p_pizza{
+    margin-left: 120px;
+    margin-top: -68px;
 }
