--- a/docs/style.css
+++ b/docs/style.css
@@ -10,21 +10,57 @@ body {
     max-width: 1440px;
     margin: 0 auto;
 }
-header{
+
+.container{
+    max-width: 1180px;
+    margin: 0px auto;
+    padding: 0px 10px;
+}
+
+.header{
+    z-index: 10;
     position: fixed;
     top: 0;
-    z-index: 10;
+    left: 0;
     margin: 0 auto;
+    width: 100%;
+
+
     background: radial-gradient(at left bottom, #161318, #220437);
     color: #fff;
     padding: 5px;
+
+
     border-radius: 0px 0px 30px 30px;
     margin-top: -20px;
     padding-right: 60px;
     padding-bottom: 10px;
-    opacity: 90%;
+    opacity: 100%;
     
 }
+
+.header_body{
+    z-index: 10;
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    height: 80px;
+    align-items: center;
+}
+.header_links a{
+    margin-right: 20px;
+}
+.header_links{
+    margin-left: -120px;
+}
+.header_list{
+    display: flex;
+}
+.header_list li{
+    list-style: none;
+    margin: 0px 0px 0px 30px;
+}
+
 nav{
     color: #FFF;
     font-family: 'Inter', sans-serif;
@@ -35,6 +71,16 @@ nav{
     display: flex;
     margin-top: 40px;
 }
+.header_logo{
+    color: #FFF;
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    display: flex;
+    margin-top: 25px;
+}
 a{
     color:#FFF;
     text-decoration: none;
@@ -43,43 +89,25 @@ a{
 a:visited{
     color: #FFF;
 }
-#button_about_me{
-    margin-right: 30px;
-    
-}
-#button_works{
-    margin-right: 30px;
-}
-#button_feedback{
-    margin-right: 30px;
-}
-#button_main{
-    margin-left: 60px;
-    margin-right: 60px;
-}
 #tg{
     width: 40px;
     height: 40px;
-    flex-shrink: 0;
     margin-right: 15px;
     margin-top: -10px;
-    
+    filter: invert(1);
 }
 #vk{
     width: 37px;
     height: 37px;
-    flex-shrink: 0;
-    margin-right: 15px;
-    margin-top: -8px;
+    margin-top: 30px;
+    filter: invert(1);
 }
 #inst{
     width: 40px;
     height: 40px;
-    flex-shrink: 0;
-    margin-right: 505px;
-    margin-top: -10px;
+    margin-top: 30px;
+    filter: invert(1);
 }
-
 h1{
     margin-bottom: 0px;
     margin-left: 60px;
@@ -144,7 +172,7 @@ h3{
 
 .main_page .content {
     position: relative;
-    z-index: 1;
+    z-index: 2;
 }
 
 .main_page .image {
@@ -218,6 +246,103 @@ h3{
     flex-flow: row wrap;
     margin-left: 40px;
 }
+
+.header_burger{
+    display: none;
+}
+
+@media (max-width: 767px) {
+    .header_burger{
+        z-index: 100;
+        display: block;
+        position: relative;
+        margin-top: 15px;
+        width: 30px;
+        height: 20px;
+    }   
+    .header_burger::before, .header_burger::after{
+        content: ' ';
+        background-color: #FFF;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        left: 0;
+        transition: all 0.3s ease 0s;
+    }
+    .header_burger::before{
+        top: 0;
+    }
+    .header_burger::after{
+        bottom: 0;
+    }
+    .header_burger span{
+        background-color: #FFF;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        left: 0;
+        top: 9px;
+        transition: all 0.3s ease 0s;
+    }
+    header::before{
+        z-index: 5;
+        content: ' ';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: radial-gradient(at left bottom, #161318, #220437);
+    }
+    .header_menu{
+        z-index: -1;
+        display: block;
+        position: fixed;
+        top: -100%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: radial-gradient(at left bottom, #161318, #220437);
+        margin-top: 70px;
+        transition: all 1s ease 0s;
+    }
+    .header_menu.active{
+        z-index: -1;
+        top: 0;
+    }
+    .header_list{
+        display: block;
+        flex-direction: column;
+    }
+    .header_list li{
+        margin: 0px 0px 30px 0px;
+        text-align: center;
+    }
+    #button_buy{
+        display: inline;
+        padding: 0px 0px;
+        border-radius: 0px;
+        border: 0px solid #FFF;
+        margin-top: 0x;
+        margin-left: 0px;
+    }
+    .header_links{
+        margin-left: -700px;
+    }
+    .header_burger.active:before{
+        transform: rotate(45deg);
+        top: 9px;
+    }
+    .header_burger.active:after{
+        transform: rotate(-45deg);
+        bottom: 9px;
+    }
+    .header_burger.active span{
+        transform: scale(0);
+    }
+
+}
+
 
 /* Удалить! */
 .cases form{
