--- a/docs/style.css
+++ b/docs/style.css
@@ -3,12 +3,13 @@ html
     width: 100%;
     min-height: 100%;
     background: #010101;
-    background: radial-gradient(at left bottom, #010101, #220437);
-}
+    background: radial-gradient(#010101, #220437);
+}   
 body {
     margin-top: 100px;
     max-width: 1440px;
     margin: 0 auto;
+
 }
 
 .container{
@@ -252,6 +253,30 @@ h3{
 }
 
 @media (max-width: 767px) {
+    .cases div{
+        display: flex;
+        align-content: center;
+        flex-flow: column nowrap;
+        
+    }
+    .cases .less3{
+        display: flex;
+        justify-content: center;
+        margin: 0px;
+    }
+    .content{
+        margin-left: -70px;
+    }
+    .cases{
+        display: block;
+    }
+    .cases div{
+        align-content: center;
+    }
+    #cases{
+        font-size: 50px;
+        display: block;
+    }
     .header_burger{
         z-index: 100;
         display: block;
@@ -283,6 +308,9 @@ h3{
         left: 0;
         top: 9px;
         transition: all 0.3s ease 0s;
+    }
+    .main_page{
+        scale: 80%;
     }
     header::before{
         z-index: 5;
@@ -317,6 +345,7 @@ h3{
     .header_list li{
         margin: 0px 0px 30px 0px;
         text-align: center;
+        font-size: 30px;
     }
     #button_buy{
         display: inline;
@@ -327,7 +356,8 @@ h3{
         margin-left: 0px;
     }
     .header_links{
-        margin-left: -700px;
+        align-items: center;
+        margin-left: 0px;
     }
     .header_burger.active:before{
         transform: rotate(45deg);
@@ -340,7 +370,10 @@ h3{
     .header_burger.active span{
         transform: scale(0);
     }
-
+    .image{
+        display: none;
+    }
+    
 }
 
 
