--- a/docs/style.css
+++ b/docs/style.css
@@ -186,6 +186,8 @@ h3{
 }
 
 .main_page .content {
+    margin-left: 0px;
+    align-items: center;
     position: relative;
     z-index: 2;
 }
@@ -377,9 +379,6 @@ h3{
     .header_burger.active span{
         transform: scale(0);
     }
-    #buy_under_text{
-        margin-top: 0px;
-    }
 }
 
 @media (max-width: 912px) {
@@ -391,9 +390,13 @@ h3{
 @media (max-width: 860px) {
     .content h3{
         width: auto;
+        margin-left: 10px;
+        text-align: center;
     }
     .content h1{
         font-size: 50px;
+        margin-left: 10px;
+        text-align: center;
     }
 }
 
@@ -409,5 +412,10 @@ h3{
     }
     .main_page{
         justify-content: space-around;
+    }
+    #buy_under_text{
+        margin-top: 0px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
