--- a/docs/style.css
+++ b/docs/style.css
@@ -1,17 +1,55 @@
 @font-face {
-    font-display: swap;
     font-family: 'Inter';
+    src: url('../fonts/inter/Inter-Regular.woff2') format('woff2');
+    font-weight: normal;
     font-style: normal;
-    font-weight: 400;
-    src: url('../assets/fonts/inter-v13-latin-regular.woff2') format('woff2');
-  }
-@font-face {
-    font-display: swap;
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    src: url('../assets/fonts/open-sans-v36-latin-regular.woff2') format('woff2');
 }
+@font-face {
+	font-family: 'Open Sans';
+	src: url('../fonts/opensans/OpenSans-Regular.eot');
+	src: local('Open Sans Regular'), local('OpenSans-Regular'),
+		url('../fonts/opensans/OpenSans-Regular.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/opensans/OpenSans-Regular.woff2') format('woff2'),
+		url('../fonts/opensans/OpenSans-Regular.woff') format('woff'),
+		url('../fonts/opensans/OpenSans-Regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Open Sans';
+	src: url('../fonts/opensans/OpenSans-Italic.eot');
+	src: local('Open Sans Italic'), local('OpenSans-Italic'),
+		url('../fonts/opensans/OpenSans-Italic.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/opensans/OpenSans-Italic.woff2') format('woff2'),
+		url('../fonts/opensans/OpenSans-Italic.woff') format('woff'),
+		url('../fonts/opensans/OpenSans-Italic.ttf') format('truetype');
+	font-weight: normal;
+	font-style: italic;
+}
+ 
+@font-face {
+	font-family: 'Open Sans';
+	src: url('../fonts/opensans/OpenSans-Bold.eot');
+	src: local('Open Sans Bold'), local('OpenSans-Bold'),
+		url('../fonts/opensans/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/opensans/OpenSans-Bold.woff2') format('woff2'),
+		url('../fonts/opensans/OpenSans-Bold.woff') format('woff'),
+		url('../fonts/opensans/OpenSans-Bold.ttf') format('truetype');
+	font-weight: bold;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Open Sans';
+	src: url('../fonts/opensans/OpenSans-BoldItalic.eot');
+	src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'),
+		url('../fonts/opensans/OpenSans-BoldItalic.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/opensans/OpenSans-BoldItalic.woff2') format('woff2'),
+		url('../fonts/opensans/OpenSans-BoldItalic.woff') format('woff'),
+		url('../fonts/opensans/OpenSans-BoldItalic.ttf') format('truetype');
+	font-weight: bold;
+	font-style: italic;
+}
+ 
 html
 {
     width: 100%;
@@ -335,17 +373,19 @@ h3{
         z-index: -1;
         display: block;
         position: fixed;
-        top: -100%;
         left: 0;
         width: 100%;
         height: 100%;
         background: radial-gradient(at left bottom, #161318, #220437);
         margin-top: 70px;
-        transition: all 1s ease 0s;
+        transition: all 0.5s ease 0s;
+        opacity: 0%;
+        top: 0;
     }
     .header_menu.active{
         z-index: -1;
         top: 0;
+        opacity: 100%;
     }
     .header_list{
         display: block;
