--- a/docs/style.css
+++ b/docs/style.css
@@ -1,6 +1,22 @@
 @font-face {
-    font-family: 'Inter';
-    src: url('../fonts/inter/Inter-Regular.woff2') format('woff2');
+    font-family: Inter;
+    src: url('../fonts/inter/Inter-Regular.eot');
+    src: local('Inter Regular'), local('Inter-Regular'),
+        url('../fonts/inter/Inter-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/inter/Inter-Regular.woff2') format('woff2'),
+        url('../fonts/inter/Inter-Regular.woff') format('woff'),
+        url('../fonts/inter/Inter-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: Gilroy;
+    src: url('../fonts/gilory/Gilroy-Regular.eot');
+    src: local('Gilroy Regular'), local('Gilroy-Regular'),
+        url('../fonts/gilory/Gilroy-Regular.woff2') format('woff2'),
+        url('../fonts/gilory/Gilroy-Regular.woff') format('woff'),
+        url('../fonts/gilory/Gilroy-Regular.ttf') format('truetype'),
+        url('../fonts/gilory/Gilroy-Regular.eot?#iefix') format('embedded-opentype');
     font-weight: normal;
     font-style: normal;
 }
@@ -14,40 +30,6 @@
 		url('../fonts/opensans/OpenSans-Regular.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
-}
-@font-face {
-	font-family: 'Open Sans';
-	src: url('../fonts/opensans/OpenSans-Italic.eot');
-	src: local('Open Sans Italic'), local('OpenSans-Italic'),
-		url('../fonts/opensans/OpenSans-Italic.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/opensans/OpenSans-Italic.woff2') format('woff2'),
-		url('../fonts/opensans/OpenSans-Italic.woff') format('woff'),
-		url('../fonts/opensans/OpenSans-Italic.ttf') format('truetype');
-	font-weight: normal;
-	font-style: italic;
-}
- 
-@font-face {
-	font-family: 'Open Sans';
-	src: url('../fonts/opensans/OpenSans-Bold.eot');
-	src: local('Open Sans Bold'), local('OpenSans-Bold'),
-		url('../fonts/opensans/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/opensans/OpenSans-Bold.woff2') format('woff2'),
-		url('../fonts/opensans/OpenSans-Bold.woff') format('woff'),
-		url('../fonts/opensans/OpenSans-Bold.ttf') format('truetype');
-	font-weight: bold;
-	font-style: normal;
-}
-@font-face {
-	font-family: 'Open Sans';
-	src: url('../fonts/opensans/OpenSans-BoldItalic.eot');
-	src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'),
-		url('../fonts/opensans/OpenSans-BoldItalic.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/opensans/OpenSans-BoldItalic.woff2') format('woff2'),
-		url('../fonts/opensans/OpenSans-BoldItalic.woff') format('woff'),
-		url('../fonts/opensans/OpenSans-BoldItalic.ttf') format('truetype');
-	font-weight: bold;
-	font-style: italic;
 }
  
 html
@@ -99,9 +81,7 @@ body {
     justify-content: space-between;
     height: 80px;
     align-items: center;
-}
-.header_links a{
-    margin-right: 20px;
+    text-align: center;
 }
 .header_links{
     margin-left: -120px;
@@ -145,21 +125,71 @@ a:visited{
 #tg{
     width: 40px;
     height: 40px;
-    margin-right: 15px;
-    margin-top: -10px;
-    filter: invert(1);
+    margin-top: 5px;
+    margin-left: 5px;
 }
 #vk{
     width: 37px;
     height: 37px;
-    margin-top: 30px;
-    filter: invert(1);
+    margin-top: 6.5px;
+    margin-left: 7px;
 }
 #inst{
     width: 40px;
     height: 40px;
-    margin-top: 30px;
-    filter: invert(1);
+    margin-top: 5px;
+    margin-left: 5px;
+}
+.btn_top{
+    margin: 10px;
+    margin-top: 38px;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background: #f1f1f1;
+    border-radius: 50%;
+    box-shadow: 0 5px 15px -5px #00000070;
+    color: #65dff5;
+    overflow: hidden;
+    position: relative;
+}
+.btn_top i{
+    line-height: 40px;
+    font-size: 25px;
+    transition: 0.2s linear;
+}
+.btn_top:hover i{
+    transform: scale(1.3);
+    color: #f1f1f1;
+}
+.btn_top:before{
+    content: '';
+    position: absolute;
+    width: 120%;
+    height: 120%;
+    background: #65dff5;
+    transform: rotate(45deg);
+    left: -110%;
+    top: 90%;
+}
+.btn_top:hover::before{
+    animation: btn_anim 0.7s 1;
+    top: -10%;
+    left: -10%;
+}
+@keyframes btn_anim {
+    0%{
+        left: -110%;
+        top: 90%;
+    }
+    50%{
+        left: 10%;
+        top: -30%;
+    }
+    100%{
+        top: -10%;
+        left: -10%;
+    }
 }
 h1{
     margin-bottom: 0px;
@@ -200,9 +230,52 @@ h3{
     align-items: center;
     flex-shrink: 0;
     border-radius: 100px;
-    background: #FFF;
     margin-top: 140px;
     margin-left: 60px;
+    background: linear-gradient(90deg,#ffffff, #ffffff, #ffffff, #ffffff);
+    background-size: 400%;
+    transform: translate(0);
+}
+@keyframes shine {
+    0% {
+        background-position: 0%;
+    }
+    100% {
+        background-position: 400%;
+    }
+}
+#buy_under_text:hover {
+    animation: shine 8s linear infinite;
+}
+#buy_under_text:before {
+    content: '';
+    position: absolute;
+    top: -5px;
+    bottom: -5px;
+    right: -5px;
+    left: -5px;
+    z-index: -1;
+    background: linear-gradient(90deg, #03a9f4, #f441a4, #ffeb3b, #03a9f4);
+    background-size: 400%;
+    border-radius: 100px;
+    filter: blur(20px);
+    opacity: 0;
+    transition: 0.5s;
+}
+#buy_under_text:hover:before {
+filter: blur(20px);
+opacity: 1;
+animation: shine 8s linear infinite;
+}
+@keyframes pulsate {
+    0%{
+        box-shadow: 
+        0 0 25px #4AFFFB,
+        0 0 50px #5824EC;
+    }
+}
+iframe:hover{
+    animation: pulsate 1s ease-in-out infinite;
 }
 
 #button_buy{
@@ -303,9 +376,139 @@ h3{
 .header_burger{
     display: none;
 }
+/* Удалить */
+.img_wrap .img_desc button{
+    border-radius: 10%;
+    font-family: Inter;
+    background-color: linear-gradient(270deg, #5824EC 0%, #4AFFFB 101.25%);
+}
+
+.img_img{
+    width: 400px;
+    height: 400px;
+}
+.img_wrap{
+    display: flex;
+    margin: 30px;
+    position: relative;
+    height: auto;
+    height: auto;
+}
+.img_desc h1, .img_desc p{
+    font-size: 20px;
+}
+.img_desc{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(29,106,154,0.72);
+    color: #fff;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity .2s, visibility .2s;
+}
+.img_wrap:hover .img_desc{
+    visibility: visible;
+    opacity: 1;
+}
+
+.sort_1{
+    width: auto;
+    display: flex;
+    justify-content: space-between;
+}
 
 
+
+
+
+.notification-container {
+    top: 0;
+    left: 0;
+    z-index: 25;
+    margin-left: 170px;
+    margin-top: 20px;
+    position: fixed;
+    font-family: Arial, sans-serif;
+}
+
+#notification-bell {
+    display: none;
+}
+
+.bell-icon {
+    width: 30px;
+    height: 30px;
+    background-color: #3498db;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+    z-index: 1;
+    transition: background-color 0.3s ease;
+}
+
+.bell-icon:before {
+    content: "";
+    position: absolute;
+    top: 7px;
+    left: 10px;
+    width: 10px;
+    height: 10px;
+    border-bottom: 2px solid #fff;
+    border-left: 2px solid #fff;
+    transform: rotate(-45deg);
+}
+
+.notification-menu {
+    display: none;
+    position: absolute;
+    top: 40px;
+    right: -10px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+    width: 150px;
+    opacity: 0;
+    transform: scaleY(0);
+    transform-origin: top right;
+    transition: all 0.3s ease;
+}
+
+.notification-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.notification-menu li {
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+}
+
+#notification-bell:checked + .bell-icon {
+    background-color: #fff;
+}
+
+#notification-bell:checked + .bell-icon:before {
+    border-color: #3498db;
+}
+
+#notification-bell:checked + .bell-icon + .notification-menu {
+    display: block;
+    opacity: 1;
+    transform: scaleY(1);
+}
+
+/* Удалить */
 @media (max-width: 1230px) {
+    body.lock{
+        overflow: hidden;
+    }
     .cases{
         display: block;
     }
@@ -380,12 +583,14 @@ h3{
         margin-top: 70px;
         transition: all 0.5s ease 0s;
         opacity: 0%;
+        visibility: hidden;
         top: 0;
     }
     .header_menu.active{
         z-index: -1;
         top: 0;
         opacity: 100%;
+        visibility: visible;
     }
     .header_list{
         display: block;
