--- a/docs/style.css
+++ b/docs/style.css
@@ -1027,7 +1027,7 @@ footer {
     color: #FFF;
     font-family: Gilroy;
     font-size: 40px;
-    font-style: normal;
+    font-style: normal; 
     font-weight: 300;
     line-height: normal;
     padding-top: 0px;
@@ -1124,7 +1124,7 @@ footer {
     justify-content: flex-end;
 }
 @media (max-width: 1230px) {
-    .about_me .orng_txt, .price .grn_txt, .feedback .center_txt a,{
+    .about_me .orng_txt, .price .grn_txt, .feedback .center_txt a{
         font-size: 70px;
     }
     body.lock {
@@ -1267,8 +1267,27 @@ footer {
     .header_burger.active span {
         transform: scale(0);
     }
-}
+    .person_info{
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
 
+}
+@media (max-width: 1260px){
+    .video_div_youtube h2{
+        text-align: center;
+        display: block;
+        margin: 0px;
+    }
+}
+@media (max-width: 1165px){
+    .video_div_youtube .video_div{
+        flex-direction: column;
+    }
+    .video_div_youtube .video_div iframe{
+        margin: 20px;
+    }
+}
 @media (max-width: 912px) {
     .cases .video_div {
         display: inline;
@@ -1288,7 +1307,6 @@ footer {
         display: none;
     }
 }
-
 @media (max-width: 860px) {
     .content h3, .price_div p {
         width: auto;
@@ -1308,6 +1326,9 @@ footer {
         display: flex;
         flex-direction: column;
         text-align: center;
+    }
+    .works_main .orng_txt{
+        font-size: 11vw;
     }
 }
 @media (max-width: 951px){
@@ -1350,6 +1371,14 @@ footer {
     #order_main_price{
         margin-top: 100px;
     }
+    .video_with_text{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        & p{
+            text-align: center;
+        }
+    }
     
 }
 @media (max-width: 780px){
@@ -1365,6 +1394,13 @@ footer {
         margin-left: 20px;
         margin-right: 20px;
     }
+    .video_div_youtube .video_as_example{
+        width: 90vw;
+        height: 50vw;
+    }
+    .video_div_youtube h2{
+        font-size: 7vw;
+    }
 }
 @media (max-width: 670px){
     .center_txt .grn_txt{
@@ -1375,6 +1411,18 @@ footer {
     }
     .about_me_main img, .about_me_main iframe{
         border-radius: 70px;
+    }
+    .person_img img{
+        max-width: 80vw !important;
+    }
+    .video_div_youtube .price p{
+        margin-top: 5px;
+    }
+
+}
+@media (max-width: 1000px){
+    .link_to_works h2{
+        font-size: 5.5vw;
     }
 }
 @media (max-width: 550px){
@@ -1419,6 +1467,18 @@ footer {
     .feedback_main h1{
         font-size: 60px;
     }
+    .video_div_youtube .price p{
+        font-size: 6vw;
+    }
+    .person_img h2{
+        font-size: 7.5vw;
+    }
+    .person_info p, .video_div_youtube p{
+        font-size: 5.5vw !important;
+        margin-top: 0px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 @media (max-width: 1330px){
     .price_example iframe{
@@ -1445,6 +1505,10 @@ footer {
     .price_main_div p, .about_video p{
         margin-left: 0px;
         font-size: 8vw;
-
+    }
+}
+@media (max-width: 1405px){
+    .person_info p{
+        font-size: 35px;
     }
 }
