--- a/docs/style.css
+++ b/docs/style.css
@@ -1,8 +1,12 @@
 
 @font-face {
-    font-family: 'grandstanderthin';
-    src: url('./fonts/grandstander-variablefont_wght-webfont.woff2') format('woff2'),
-         url('./fonts/grandstander-variablefont_wght-webfont.woff') format('woff');
+    font-family: 'grandstander';
+    src: url('./fonts/grandstander-variablefont_wght-webfont.eot');
+    src: url('./fonts/grandstander-variablefont_wght-webfont.eot?#iefix') format('embedded-opentype'),
+         url('./fonts/grandstander-variablefont_wght-webfont.woff2') format('woff2'),
+         url('./fonts/grandstander-variablefont_wght-webfont.woff') format('woff'),
+         url('./fonts/grandstander-variablefont_wght-webfont.ttf') format('truetype'),
+         url('./fonts/grandstander-variablefont_wght-webfont.svg#grandstanderthin') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -12,9 +16,13 @@
 
 
 @font-face {
-    font-family: 'open_sansregular';
-    src: url('./fonts/opensans-variablefont_wdthwght-webfont.woff2') format('woff2'),
-         url('./fonts/opensans-variablefont_wdthwght-webfont.woff') format('woff');
+    font-family: 'open_sans';
+    src: url('./fonts/opensans-variablefont_wdthwght-webfont.eot');
+    src: url('./fonts/opensans-variablefont_wdthwght-webfont.eot?#iefix') format('embedded-opentype'),
+         url('./fonts/opensans-variablefont_wdthwght-webfont.woff2') format('woff2'),
+         url('./fonts/opensans-variablefont_wdthwght-webfont.woff') format('woff'),
+         url('./fonts/opensans-variablefont_wdthwght-webfont.ttf') format('truetype'),
+         url('./fonts/opensans-variablefont_wdthwght-webfont.svg#open_sansregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -24,9 +32,13 @@
 
 
 @font-face {
-    font-family: 'interregular';
-    src: url('./fonts/inter-variablefont_slntwght-webfont.woff2') format('woff2'),
-         url('./fonts/inter-variablefont_slntwght-webfont.woff') format('woff');
+    font-family: 'inter';
+    src: url('./fonts/inter-variablefont_slntwght-webfont.eot');
+    src: url('./fonts/inter-variablefont_slntwght-webfont.eot?#iefix') format('embedded-opentype'),
+         url('./fonts/inter-variablefont_slntwght-webfont.woff2') format('woff2'),
+         url('./fonts/inter-variablefont_slntwght-webfont.woff') format('woff'),
+         url('./fonts/inter-variablefont_slntwght-webfont.ttf') format('truetype'),
+         url('./fonts/inter-variablefont_slntwght-webfont.svg#interregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -36,9 +48,13 @@
 
 
 @font-face {
-    font-family: 'gilroyregular';
-    src: url('./fonts/gilroy-regular-webfont.woff2') format('woff2'),
-         url('./fonts/gilroy-regular-webfont.woff') format('woff');
+    font-family: 'gilroy';
+    src: url('./fonts/gilroy-regular-webfont.eot');
+    src: url('./fonts/gilroy-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('./fonts/gilroy-regular-webfont.woff2') format('woff2'),
+         url('./fonts/gilroy-regular-webfont.woff') format('woff'),
+         url('./fonts/gilroy-regular-webfont.ttf') format('truetype'),
+         url('./fonts/gilroy-regular-webfont.svg#gilroyregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -48,10 +64,14 @@
 
 
 @font-face {
-    font-family: 'gilroybold';
-    src: url('./fonts/gilroy-bold-webfont.woff2') format('woff2'),
-         url('./fonts/gilroy-bold-webfont.woff') format('woff');
-    font-weight: normal;
+    font-family: 'gilroy';
+    src: url('./fonts/gilroy-bold-webfont.eot');
+    src: url('./fonts/gilroy-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('./fonts/gilroy-bold-webfont.woff2') format('woff2'),
+         url('./fonts/gilroy-bold-webfont.woff') format('woff'),
+         url('./fonts/gilroy-bold-webfont.ttf') format('truetype'),
+         url('./fonts/gilroy-bold-webfont.svg#gilroybold') format('svg');
+    font-weight: bold;
     font-style: normal;
 
 }
